Title change and email fix.

--- a/contact.html
+++ b/contact.html
@@ -49,12 +49,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         <form action="#" method="post">
           <div class="row mb-4">
             <div class="col-md-12">
-              <input type="text" class="form-control" placeholder="Email Address: pranjultripathi98@gmail.com">
+              <p style="color:black;font-size:20px">Email Address: pranjultripathi98@gmail.com</p>
+              <p style="color:black;font-size:20px">Phone        : +91-XXXXXXXXXX</p>
             </div>
           </div>
           <div class="row mb-4">
             <div class="col-md-12">
-              <input type="text" class="form-control" placeholder="Phone +91-XXXXXXXXXX">
             </div>
           </div>          
         </form>
